# AMI-MLSD

./: .env.example  .gitignore  Locust_2025-06-21-21h32.html  README.md  eval.ipynb  fastapi_app.py  launch.sh  llm.py  llm_judge.py  locust_readme.md  locust_test.py  main.py  pyproject.toml  rouge_judge.py  ui.py
benchmarks/: benchmark_20250620_145132.md  benchmark_20250620_154816.md  benchmark_20250620_162131.md  benchmark_20250623_001950.md  benchmark_20250623_113834.md
data/: EDA.ipynb
docs/: ml_system_design_doc.md  ml_system_design_doc_example.md
multi_agent_system/: base_agent.py  character_agent.py  locations_agent.py  storyteller.py  supervisor.py  town_agent.py  world_agent.py
prompts/: character_agent_prompt.py  locations_agent_prompt.py  main.py  storyteller_prompt.py  supervisor_prompt.py  town_agent_prompt.py  world_agent_prompt.py
tools/: __init__.py  donjon.py  tool_manager.py
