[project]
name = "ml-ami"
version = "0.1.0"
description = ""
authors = [
    {name = "Jacovkamana",email = "yasha.protasov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff (>=0.11.4,<0.12.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "B9",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF",
]

ignore = [
    "B011",
    "E501"
]